Changed EventEntry to getlast